--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,20 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 version '1.0.0.SNAPSHOT'
 group 'org.apache.geode.support'
 
@@ -40,12 +57,12 @@ repositories {
 }
 
 dependencies {
+    compile ("org.apache.commons:commons-lang3:3.7")
     compile ("org.springframework.boot:spring-boot-starter")
     compile ("org.springframework.shell:spring-shell-starter:2.0.0.RELEASE")
 
     testCompile ("org.assertj:assertj-core:3.9.0")
     testCompile ("pl.pragmatists:JUnitParams:1.1.1")
-
     testCompile ("org.powermock:powermock-api-mockito2:2.0.0-beta.5")
     testCompile ("org.powermock:powermock-module-junit4:2.0.0-beta.5")
     testCompile ("org.springframework.boot:spring-boot-starter-test")
