- Cleaned up test code.

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@
  * limitations under the License.
  */
 
-version '1.0.0.SNAPSHOT'
+version '1.0.0'
 group 'org.apache.geode.support'
 
 buildscript {
